whitespace no longer valid input, added title but it needs formatting

--- a/css/style.css
+++ b/css/style.css
@@ -75,23 +75,26 @@ ul.navigation {
 /_/  |_\__,_/\__,_/   \____/___/
 
 ================================== */
+.get-title {
+	margin-top: 40px;
+}
 
 .add-options, .add-factors {
 	width: 48%;
-	margin-top: 40px;
+	margin-top: 20px;
 	float: left;
-	min-height: 400px;
+	min-height: 300px;
 }
 
 .add-factors {
 	margin-left: 4%;
 }
 
-.add-options > h2, .add-factors > h2 {
+.get-title > h2, .add-options > h2, .add-factors > h2 {
 	margin-bottom: 10px;
 }
 
-#option-box, #factor-box {
+#title-box, #option-box, #factor-box {
 	font-size: 18px;
 	width: 1000px;
 	max-width: 88%;
@@ -104,7 +107,7 @@ ul.navigation {
 	height: 40px;
 }
 
-#option-box:focus, #factor-box:focus {
+#title-box:focus, #option-box:focus, #factor-box:focus {
 	outline: 4px solid #BCBCBC;
 }
 
